# Lib_ConsoleCreator

./: README.md  setup.cfg
examples/: pypi_version_test.py  test.py
src/: __init__.py
src/console_creator/: __init__.py  main.py
