[metadata]
name = console-creator-megat69
version = 1.0
author = megat69
description = A Python lib that makes creating a console a simple task !
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/megat69/Lib_ConsoleCreator
project_urls =
    Bug Tracker = https://github.com/megat69/Lib_ConsoleCreator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src